# time_sheets

./: .coverage  .cursorignore  README.md  cli.py  pyproject.toml  time_sheet_generator
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py
time_sheets/: __init__.py  generator.py
